--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -1,13 +1,16 @@
 @import "./variables.scss";
-@import "./fonts.scss";
 
-.undersea {
-  display: inline-block;
+.undersea-font-big {
+  font-size: 100px;
+  letter-spacing: 2px;
+}
+
+.undersea-font {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   font-family: Baloo;
   color: $primary-color;
-  font-size: 93px;
 }
 
 .bg-image {
@@ -23,5 +26,5 @@
 }
 .mainpage-width {
   @extend .mainpage-middle;
-  max-width: 408px;
+  max-width: 460px;
 }
