Navbar, Menu, Profile

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,3 +1,7 @@
 @import "./assets/scss/fonts.scss";
 @import "./assets/scss/common.scss";
 @import "./assets/scss/variables.scss";
+@import "./assets/scss/navbar.scss";
+@import "./assets/scss/navbaricon.scss";
+@import "./assets/scss/menu.scss";
+@import "./assets/scss/profilcontainer.scss";
