--- a/frontend/src/assets/scss/forms.scss
+++ b/frontend/src/assets/scss/forms.scss
@@ -32,6 +32,11 @@
   margin-bottom: 28px;
 }
 
+.form-wrapper {
+  margin: 0;
+  position: relative;
+}
+
 .form-button {
   color: $secondary-color;
   text-align: center;
