--- a/frontend/src/assets/scss/menu.scss
+++ b/frontend/src/assets/scss/menu.scss
@@ -5,9 +5,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
-  height: 50px;
-
-  justify-content: center;
 }
 
 .menu-bg > li > a {
@@ -15,10 +12,10 @@
   text-align: center;
   font-family: Baloo;
   font-size: 18px;
-  border-radius: 100px;
+  border-radius: 90px;
   flex: 1;
-  border: none;
-  height: 100%;
+  padding-top: 12px;
+  padding-bottom: 12px;
   box-shadow: 0 3px 6px rgba(59, 125, 189, 1);
   background-image: linear-gradient(
     to right,
