--- a/frontend/src/assets/scss/profilcontainer.scss
+++ b/frontend/src/assets/scss/profilcontainer.scss
@@ -1,2 +1,31 @@
+@import "./variables.scss";
+
 .profile-bg {
+  flex: 1;
+  background-color: white;
+  border-radius: 14px;
+  background-color: rgba(#ffffff, $alpha: 0.25);
+  margin-top: 40px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-right: 15px;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  div {
+    margin-bottom: 20px;
+  }
+  a:hover {
+    text-decoration: none;
+    color: $primary-color;
+  }
+}
+
+.profile-bg > * {
+  color: rgba(#ffffff, $alpha: 0.75);
+  font-family: Baloo;
+  font-weight: 14px;
 }
