--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -5,3 +5,6 @@
 @import "./assets/scss/navbaricon.scss";
 @import "./assets/scss/menu.scss";
 @import "./assets/scss/profilcontainer.scss";
+@import "./assets/scss/mainpage.scss";
+@import "./assets/scss/buildings.scss";
+@import "./assets/scss/development.scss";
