--- a/frontend/src/assets/scss/variables.scss
+++ b/frontend/src/assets/scss/variables.scss
@@ -1,6 +1,9 @@
 $secondary-color: #1c3e76;
 $primary-color: #9ffff0;
+$component-color: rgba(3, 37, 95, 1);
+$underline-color: rgba(1, 243, 231, 0.2);
 
 $padding-vertical: 13px;
 $total-padding-vertical: 21px;
 $rectangle-size: 58px;
+$maincomponents-padding: 48px;
