--- a/frontend/src/assets/scss/fonts.scss
+++ b/frontend/src/assets/scss/fonts.scss
@@ -2,3 +2,12 @@
   font-family: Baloo;
   src: url("assets/fonts/baloo/Baloo-Regular.ttf");
 }
+@font-face {
+  font-family: OpenSansBold;
+  src: url("assets/fonts/open-sans/OpenSans-Bold.ttf");
+}
+
+@font-face {
+  font-family: OpenSansRegular;
+  src: url("assets/fonts/open-sans/OpenSans-Regular.ttf");
+}
