--- a/frontend/src/assets/scss/profilcontainer.scss
+++ b/frontend/src/assets/scss/profilcontainer.scss
@@ -1,29 +1,39 @@
 @import "./variables.scss";
 
+$local-profilrect-size: 96px;
+
 .profile-bg {
   flex: 1;
   background-color: white;
-  border-radius: 14px;
+  border-radius: 16px;
   background-color: rgba(#ffffff, $alpha: 0.25);
-  margin-top: 40px;
   padding-top: 25px;
   padding-bottom: 25px;
-  padding-right: 15px;
-  padding-left: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+
   div {
-    margin-bottom: 20px;
+    margin-bottom: 22px;
   }
   a:hover {
     text-decoration: none;
     color: $primary-color;
   }
+  .profile-margin {
+    margin-bottom: 6px;
+  }
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
+  }
+  .rectangle {
+    width: $local-profilrect-size;
+    height: $local-profilrect-size;
+  }
 }
-
 .profile-bg > * {
   color: rgba(#ffffff, $alpha: 0.75);
   font-family: Baloo;
