--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -8,3 +8,4 @@
 @import "./assets/scss/mainpage.scss";
 @import "./assets/scss/buildings.scss";
 @import "./assets/scss/development.scss";
+@import "./assets/scss/war.scss";
