--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -9,3 +9,4 @@
 @import "./assets/scss/buildings.scss";
 @import "./assets/scss/development.scss";
 @import "./assets/scss/war.scss";
+@import "./assets/scss/rank.scss";
