--- a/frontend/src/assets/scss/variables.scss
+++ b/frontend/src/assets/scss/variables.scss
@@ -7,3 +7,7 @@ $padding-vertical: 13px;
 $total-padding-vertical: 21px;
 $rectangle-size: 58px;
 $maincomponents-padding: 48px;
+
+$first-breakpoint:1200px;
+$second-breakpoint:1050px;
+$third-breakpoint:880px;
