--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -54,6 +54,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+  min-width: 780px;
+  
+  @media screen and (max-width: $first-breakpoint) {
+    min-width: 700px;
+  }
+  @media screen and (max-width: $second-breakpoint) {
+    min-width: 600px;
+  }
+  @media screen and (max-width: $third-breakpoint) {
+    min-width: 400px;
+  }
 }
 
 .hide-scroll::-webkit-scrollbar {
@@ -72,13 +84,15 @@
     @extend .undersea-font;
     font-size: 32px;
     color: white;
-    margin-bottom: 17px;
+    margin: 0;
   }
   .main-font-important {
     font-size: 16px;
     font-family: OpenSansBold;
     margin: 0;
     color: white;
+    
+    padding-top: 17px;
   }
   p {
     font-size: 16px;
