--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -10,3 +10,4 @@
 @import "./assets/scss/development.scss";
 @import "./assets/scss/war.scss";
 @import "./assets/scss/rank.scss";
+@import "./assets/scss/army.scss";
