css 90% , redux try

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,13 +1,15 @@
 @import "./assets/scss/fonts.scss";
 @import "./assets/scss/common.scss";
 @import "./assets/scss/variables.scss";
-@import "./assets/scss/navbar.scss";
-@import "./assets/scss/navbaricon.scss";
-@import "./assets/scss/menu.scss";
-@import "./assets/scss/profilcontainer.scss";
-@import "./assets/scss/mainpage.scss";
-@import "./assets/scss/buildings.scss";
-@import "./assets/scss/development.scss";
-@import "./assets/scss/war.scss";
-@import "./assets/scss/rank.scss";
-@import "./assets/scss/army.scss";
+@import "./components/navBar/navbar.scss";
+@import "./components/navBarIcons/navbaricon.scss";
+@import "./components/menu/menu.scss";
+@import "./components/profileContainer/profilcontainer.scss";
+@import "./pages/mainpage/mainpage.scss";
+@import "./pages/mainpage/buildings/buildings.scss";
+@import "./pages/mainpage/development/development.scss";
+@import "./pages/mainpage/war/war.scss";
+@import "./pages/mainpage/rank/rank.scss";
+@import "./pages/mainpage/army/army.scss";
+@import "./components/componentHeader/componentheader.scss";
+@import "./pages/mainpage/attack/Attack.scss";
