--- a/frontend/src/components/profileContainer/profilcontainer.scss
+++ b/frontend/src/components/profileContainer/profilcontainer.scss
@@ -1,5 +1,3 @@
-@import "./variables.scss";
-
 $local-profilrect-size: 96px;
 
 .profile-bg {
@@ -9,6 +7,7 @@ $local-profilrect-size: 96px;
   background-color: rgba(#ffffff, $alpha: 0.25);
   padding-top: 25px;
   padding-bottom: 25px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
