--- a/frontend/src/pages/mainpage/development/development.scss
+++ b/frontend/src/pages/mainpage/development/development.scss
@@ -13,7 +13,7 @@ $local-circle-size: 22px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   cursor: pointer;
 
   .development-img {
@@ -62,12 +62,11 @@ $local-circle-size: 22px;
 }
 
 .development-page {
-  max-height: 400px;
-  min-height: 250px;
+  max-height: 100%;
   display: flex;
   flex-direction: row;
   border-bottom: 2px solid $underline-color;
-  padding-bottom: 20px;
+
   margin-bottom: 40px;
   flex-wrap: wrap;
   justify-content: space-around;
