--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -20,18 +20,23 @@
   }
 }
 .loading-circle {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
+  color: $secondary-color;
+  text-align: end;
+  font-size: 30px;
+  align-self: center;
+  margin-top: 40px;
   border-radius: 50%;
   border: 2px solid $secondary-color;
   background-image: linear-gradient(
     to right,
-    rgba(15, 207, 222, 1),
-    rgba(159, 255, 240, 1)
+    rgb(16, 0, 104),
+    rgb(194, 255, 246)
   );
 
   animation-name: spin;
-  animation-duration: 5000ms;
+  animation-duration: 3000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
