--- a/frontend/src/pages/mainpage/army/army.scss
+++ b/frontend/src/pages/mainpage/army/army.scss
@@ -81,6 +81,6 @@ $local-rectaangle-size: 116px;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
