--- a/frontend/src/pages/mainpage/buildings/buildings.scss
+++ b/frontend/src/pages/mainpage/buildings/buildings.scss
@@ -7,8 +7,7 @@
   margin-bottom: 40px;
   flex-wrap: wrap;
   justify-content: space-around;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: auto;
 
   label {
     input:checked ~ .building-item {
