--- a/frontend/src/pages/mainpage/rank/rank.scss
+++ b/frontend/src/pages/mainpage/rank/rank.scss
@@ -25,7 +25,7 @@ $local-input-paddingw: 23px;
   margin: 0;
   list-style-type: none;
   max-height: 450px;
-  overflow: scroll;
+  overflow: auto;
 
   li {
     display: flex;
