--- a/frontend/src/pages/mainpage/war/war.scss
+++ b/frontend/src/pages/mainpage/war/war.scss
@@ -1,5 +1,4 @@
 .war-component {
- 
   @media screen and (max-width: 1200px) {
     max-width: 800px;
   }
@@ -22,8 +21,8 @@
   margin: 0;
   list-style-type: none;
   max-height: 450px;
-  overflow: scroll;
-  
+  overflow: auto;
+
   li {
     display: flex;
     padding: 20px;
@@ -37,7 +36,7 @@
       color: white;
       flex: 1;
     }
-    .war-country{
+    .war-country {
       padding-right: 50px;
     }
     .war-scroll {
@@ -46,7 +45,6 @@
       width: 400px;
       justify-content: flex-end;
       flex-wrap: wrap;
-      
     }
     div {
       display: inline;
