--- a/frontend/src/components/navBar/navbar.scss
+++ b/frontend/src/components/navBar/navbar.scss
@@ -17,12 +17,17 @@ $local-padding-horizontal: 29px;
     display: flex;
     flex-direction: row;
 
-    div > {
-      span {
+    > .navbar-info {
+      justify-content: center;
+      align-items: center;
+      > span {
         font-size: 32px;
         color: $secondary-color;
         text-align: center;
+        display: table-cell;
+        vertical-align: middle;
         font-family: Baloo;
+        margin-right: 20px;
       }
     }
     > div {
@@ -31,17 +36,27 @@ $local-padding-horizontal: 29px;
       flex-direction: row;
       justify-content: space-between;
       margin-right: 30px;
+
       @media screen and (max-width: 1466px) {
         width: 210px;
       }
     }
-    ul {
-      flex: 1;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-      flex-wrap: wrap;
+    .navbar-wrapper {
+      overflow-x: auto;
+      overflow-y: hidden;
+      width: 100%;
+      > {
+        display: inline;
+      }
+      ul {
+        min-height: 60px;
+        min-width: auto;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+      }
     }
+
     li:first-child {
       @media screen and (max-width: 1413px) {
         margin-bottom: 10px;
