--- a/frontend/src/components/navBarIcons/navbaricon.scss
+++ b/frontend/src/components/navBarIcons/navbaricon.scss
@@ -19,16 +19,21 @@
     > .navbaricon-info {
       @extend .navbaricon-font;
       height: 31px;
-      font-size: 20px;
+      font-size: 26px;
+
+      white-space: nowrap;
     }
   }
 }
 .navbaricon-rectangle {
   @extend .rectangle;
   margin-right: 19px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   > img {
-    width: 100%;
-    height: 100%;
+    min-width: 80%;
+    min-height: 80%;
   }
 }
 .navbaricon-rectangle > div {
@@ -37,17 +42,20 @@
   text-align: center;
 }
 
-.navbaricon-font > span {
-  color: $secondary-color;
-  text-align: center;
-  font-family: Baloo;
+.navbaricon-font {
+  > span {
+    color: $secondary-color;
+    text-align: center;
+    font-family: Baloo;
 
-  display: inline-flex;
-  align-items: center;
+    display: inline-flex;
+    align-items: center;
+  }
 }
 
 .navbaricon-amount {
   font-size: 32px;
   flex: 1;
   line-height: 1;
+  white-space: nowrap;
 }
