--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -89,11 +89,20 @@
   max-height: 750px;
 }
 .circle {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   background-color: $primary-color;
   border-radius: 50%;
   user-select: none;
+  justify-content: center;
+  align-items: center;
+  > img {
+    width: 80%;
+    height: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 4px;
+  }
 }
 .circle:active {
   box-shadow: 0 3px 6px rgba(59, 125, 189, 1);
