--- a/frontend/src/pages/mainpage/development/development.scss
+++ b/frontend/src/pages/mainpage/development/development.scss
@@ -16,6 +16,10 @@ $local-circle-size: 22px;
   justify-content: flex-start;
   cursor: pointer;
 
+  img {
+    max-width: 80%;
+    max-height: 80%;
+  }
   .development-img {
     position: relative;
     width: 100%;
@@ -27,7 +31,7 @@ $local-circle-size: 22px;
       top: 0;
       left: 0;
     }
-    div {
+    > .checkmark {
       position: absolute;
       top: 0;
       left: 0;
@@ -35,6 +39,13 @@ $local-circle-size: 22px;
       width: $local-circle-size;
       height: $local-circle-size;
       background-color: $primary-color;
+    }
+    > .img-size-content {
+      min-width: 210px;
+      min-height: 210px;
+      display: flex;
+      justify-content: center;
+      align-content: center;
     }
   }
 
