Army: texbox input field

--- a/frontend/src/pages/mainpage/army/army.scss
+++ b/frontend/src/pages/mainpage/army/army.scss
@@ -87,3 +87,11 @@ $local-rectaangle-size: 116px;
   overflow-y: auto;
   overflow-x: hidden;
 }
+.input-field {
+  width: 40px;
+  background-color: inherit;
+  border: 0ch;
+  font-size: 16px;
+  font-family: OpenSansRegular;
+  color: white;
+}
