--- a/frontend/src/pages/mainpage/mainpage.scss
+++ b/frontend/src/pages/mainpage/mainpage.scss
@@ -3,6 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  .main-wave {
+    width: 100%;
+    margin-bottom: -25%;
+  }
 }
 
 .undersea-font-mainpage {
