--- a/frontend/src/pages/mainpage/army/army.scss
+++ b/frontend/src/pages/mainpage/army/army.scss
@@ -95,3 +95,8 @@ $local-rectaangle-size: 116px;
   font-family: OpenSansRegular;
   color: white;
 }
+.army-text {
+  font-size: 16px;
+  font-family: OpenSansRegular;
+  color: white;
+}
