--- a/frontend/src/pages/mainpage/development/development.scss
+++ b/frontend/src/pages/mainpage/development/development.scss
@@ -65,6 +65,9 @@ $local-circle-size: 22px;
       color: white;
       text-align: center;
     }
+    .development-price {
+      margin-top: 10px;
+    }
   }
 }
 
