For x upload defending trops

--- a/frontend/src/pages/mainpage/army/army.scss
+++ b/frontend/src/pages/mainpage/army/army.scss
@@ -94,6 +94,7 @@ $local-rectaangle-size: 116px;
   font-size: 16px;
   font-family: OpenSansRegular;
   color: white;
+  text-align: center;
 }
 .army-text {
   font-size: 16px;
