--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -18,6 +18,11 @@
   @media screen {
   }
 }
+.common-error-text {
+  color: white;
+  font-family: Baloo;
+  font-size: 16px;
+}
 .wave {
   margin-bottom: -25%;
   margin-top: 130px;
