--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -13,3 +13,4 @@
 @import "./pages/mainpage/army/army.scss";
 @import "./components/componentHeader/componentheader.scss";
 @import "./pages/mainpage/attack/Attack.scss";
+@import "./pages/mainpage/reports/reports.scss";
