--- a/frontend/src/pages/mainpage/attack/Attack.scss
+++ b/frontend/src/pages/mainpage/attack/Attack.scss
@@ -1,3 +1,6 @@
+::placeholder {
+  color: white;
+}
 .attack-page {
   display: flex;
   min-width: 500px;
@@ -20,6 +23,8 @@
     }
     input {
       margin-top: 20px;
+      outline: none;
+      color: white;
     }
     ul {
       overflow: auto;
@@ -30,6 +35,7 @@
     }
   }
 }
+
 .attack-item {
   width: 100%;
   margin-bottom: 40px;
@@ -46,32 +52,6 @@
       width: 100%;
       height: 3px;
       box-shadow: 0 3px 6px #707070;
-    }
-
-    input::-moz-range-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      background: $primary-color;
-      cursor: pointer;
-    }
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      background: $primary-color;
-    }
-    input::-moz-range-progress {
-      background-color: $primary-color;
-    }
-    input::-ms-fill-lower {
-      background-color: $primary-color;
-    }
-    input[type="range"]::-webkit-slider-runnable-track {
-      height: 10px;
-      -webkit-appearance: none;
-      color: #13bba4;
-      margin-top: -1px;
     }
   }
 }
