rank and attack case-sensitive fix, unique keys

--- a/frontend/src/pages/mainpage/rank/rank.scss
+++ b/frontend/src/pages/mainpage/rank/rank.scss
@@ -19,6 +19,7 @@ $local-input-paddingw: 23px;
   padding-bottom: $local-input-paddingh;
   border: none;
   margin-bottom: 20px;
+  color: white;
 }
 .rank-page {
   width: 100%;
