--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -14,3 +14,4 @@
 @import "./components/componentHeader/componentheader.scss";
 @import "./pages/mainpage/attack/Attack.scss";
 @import "./pages/mainpage/reports/reports.scss";
+@import "./pages/mainpage/Profile/profile.scss";
