--- a/frontend/src/pages/mainpage/mainpage.scss
+++ b/frontend/src/pages/mainpage/mainpage.scss
@@ -8,14 +8,43 @@
     margin-bottom: -25%;
   }
 }
-
+.bg-holder {
+  position: relative;
+  width: 100%;
+  height: inherit;
+  min-height: 100%;
+  max-height: 100%;
+}
+.building-img-holder {
+  position: absolute;
+  z-index: 1;
+  min-height: 100%;
+  max-height: 100%;
+  height: 100%;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  margin-right: auto;
+  margin-left: auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  .bg-items-flex {
+  }
+}
 .undersea-font-mainpage {
   @extend .undersea-font;
   font-size: 38px;
   align-self: flex-end;
 }
 .main-page {
+  z-index: 999;
+  position: absolute;
   display: flex;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
   flex-direction: column;
   min-height: inherit;
 
