--- a/frontend/src/pages/mainpage/reports/reports.scss
+++ b/frontend/src/pages/mainpage/reports/reports.scss
@@ -21,7 +21,7 @@
       margin-top: 10px;
       margin-bottom: 10px;
       flex: 1;
-      padding-left: 30px;
+      padding-left: 50px;
       font-size: 16px;
       font-family: OpenSansBold;
       line-height: 1;
@@ -45,19 +45,14 @@
       margin-left: auto;
       line-height: 1;
     }
-    p {
-      border: 2px solid rgb(0, 90, 126);
-      background-color: rgb(36, 229, 255);
-      max-width: 35px;
-      max-height: 35px;
-      min-width: 35px;
-      min-height: 35px;
-      text-align: center;
-      border-radius: 50%;
-      font-size: 18px;
-      cursor: pointer;
-      margin-right: 30px;
-    }
+  }
+  .report-container {
+    position: relative;
+  }
+  .delete-mark {
+    z-index: 999;
+    position: relative;
+    top: 25px;
   }
   span {
     color: white;
@@ -72,8 +67,9 @@
   }
 
   li {
+    z-index: 1;
     border-bottom: 4px solid rgba(0, 183, 255, 0.4);
-    margin-bottom: 30px;
+
     border-radius: 24px;
     cursor: pointer;
     > .report-info {
