--- a/frontend/src/pages/mainpage/war/war.scss
+++ b/frontend/src/pages/mainpage/war/war.scss
@@ -28,7 +28,7 @@
   max-height: 450px;
   overflow: auto;
 
-  li {
+  > li {
     display: flex;
     padding: 20px;
     flex-direction: row;
@@ -51,7 +51,7 @@
       justify-content: flex-end;
       flex-wrap: wrap;
     }
-    div {
+    > div {
       display: inline;
     }
   }
