--- a/frontend/src/pages/mainpage/Profile/profile.scss
+++ b/frontend/src/pages/mainpage/Profile/profile.scss
@@ -3,3 +3,14 @@
   max-width: 700px;
   min-height: 650px;
 }
+
+.white {
+  color: white;
+}
+.form-font-profile {
+  font-size: 32px;
+  color: $secondary-color;
+  text-align: left;
+  font-family: Baloo;
+  margin-bottom: 28px;
+}
