NotFound Page done

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -15,3 +15,4 @@
 @import "./pages/mainpage/attack/Attack.scss";
 @import "./pages/mainpage/reports/reports.scss";
 @import "./pages/mainpage/Profile/profile.scss";
+@import "./pages/notFound/notfound.scss";
