--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -48,7 +48,10 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-
+.main-loading {
+  width: 100px;
+  height: 100px;
+}
 @keyframes spin {
   from {
     transform: rotate(0deg);
