--- a/frontend/src/pages/mainpage/reports/reports.scss
+++ b/frontend/src/pages/mainpage/reports/reports.scss
@@ -10,7 +10,7 @@
   padding: 0;
   border-radius: 24px;
   list-style-type: none;
-  head {
+  .head {
     display: flex;
     flex: row;
     justify-content: center;
