--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,4 +1,6 @@
 @import "./assets/scss/fonts.scss";
+
+@import "./assets/scss/eventpopup.scss";
 @import "./assets/scss/common.scss";
 @import "./assets/scss/variables.scss";
 @import "./components/navBar/navbar.scss";
