--- a/frontend/src/pages/mainpage/reports/reports.scss
+++ b/frontend/src/pages/mainpage/reports/reports.scss
@@ -75,6 +75,10 @@
     > .report-info {
       display: flex;
       flex-direction: row;
+      > img {
+        max-width: 100px;
+        max-height: 100px;
+      }
       > div {
         flex: 1;
         > .report-units {
