--- a/frontend/src/assets/scss/common.scss
+++ b/frontend/src/assets/scss/common.scss
@@ -90,10 +90,12 @@
 }
 .bg-image-loggedin {
   min-height: 100vh;
+  height: 100%;
   background-image: url("./assets/images/login-bg.png");
   background-repeat: repeat-y;
   background-size: cover;
   position: relative;
+  background-position: center center;
 }
 
 .mainpage-middle {
