--- a/frontend/src/pages/mainpage/mainpage.scss
+++ b/frontend/src/pages/mainpage/mainpage.scss
@@ -15,21 +15,25 @@
   min-height: 100%;
   max-height: 100%;
 }
+$randomNumber: random(20);
 .building-img-holder {
   position: absolute;
-  z-index: 1;
-  min-height: 100%;
-  max-height: 100%;
-  height: 100%;
+  z-index: -1;
+  min-height: 10%;
+  max-height: 10%;
+  height: 10%;
   display: flex;
   width: 100%;
   flex-direction: row;
   margin-right: auto;
   margin-left: auto;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   align-content: center;
+  /* prettier-ignore */
   .bg-items-flex {
+    //position: absolute;
+    margin-top: $randomNumber + px;
   }
 }
 .undersea-font-mainpage {
@@ -55,6 +59,7 @@
     margin-left: $total-padding-vertical;
     margin-right: $total-padding-vertical;
     main {
+      position: relative;
       flex: 1;
       display: flex;
       align-items: center;
