--- a/frontend/src/components/navBar/navbar.scss
+++ b/frontend/src/components/navBar/navbar.scss
@@ -1,5 +1,20 @@
 $local-padding-horizontal: 29px;
 
+p {
+  z-index: 2;
+  position: absolute;
+  right: -30px;
+  top: 0;
+  user-select: none;
+  text-align: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  color: whitesmoke;
+  box-shadow: 0 0 3px rgb(243, 68, 68);
+}
+
 .navbar-bg {
   padding-left: $total-padding-vertical;
   padding-right: $total-padding-vertical;
