--- a/frontend/src/components/navBarIcons/navbaricon.scss
+++ b/frontend/src/components/navBarIcons/navbaricon.scss
@@ -2,6 +2,21 @@
   display: flex;
   flex-direction: row;
   margin-left: 50px;
+  p {
+    z-index: 2;
+    position: relative;
+    right: -5px;
+    top: 10px;
+    user-select: none;
+    text-align: center;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    background-color: red;
+    color: whitesmoke;
+    box-shadow: 0 0 3px rgb(243, 68, 68);
+  }
 
   @media screen and (max-width: 1650px) {
     margin-left: 40px;
