--- a/frontend/src/components/navBarIcons/navbaricon.scss
+++ b/frontend/src/components/navBarIcons/navbaricon.scss
@@ -58,4 +58,19 @@
   flex: 1;
   line-height: 1;
   white-space: nowrap;
+  > p {
+    z-index: 2;
+    position: relative;
+    right: -5px;
+    top: 10px;
+    user-select: none;
+    text-align: center;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    background-color: red;
+    color: whitesmoke;
+    box-shadow: 0 0 3px rgb(243, 68, 68);
+  }
 }
