--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -18,6 +18,7 @@
 @import "./pages/mainpage/reports/reports.scss";
 @import "./pages/mainpage/Profile/profile.scss";
 @import "./pages/notFound/notfound.scss";
+@import "./assets/animations/bubble.scss";
 .App {
   overflow: hidden;
   min-width: 500px;
