--- a/frontend/src/components/navBarIcons/navbaricon.scss
+++ b/frontend/src/components/navBarIcons/navbaricon.scss
@@ -43,6 +43,7 @@
 .navbaricon-rectangle {
   @extend .rectangle;
   margin-right: 19px;
+  user-select: none;
   display: flex;
   justify-content: center;
   align-items: center;
